# among-us-server

./: .gitignore  CMakeLists.txt  README.md  package.json
cmake/: FindBoost.cmake
src/: connection.hpp  deserializer.ts  index.ts  main.cpp  serializer.ts
src/net/: connection.cpp  connection.hpp  game_code.cpp  game_code.hpp
src/net/buffer/: buffer.cpp  buffer.hpp  hazel.hpp
src/net/inner/: constants.hpp  options.cpp  options.hpp
src/net/packet/: packet.hpp  packets.cpp  packets.hpp
src/net/packet/option/: acknowledgement.cpp  acknowledgement.hpp  hello.cpp  hello.hpp  reliable.cpp  reliable.hpp
src/net/packet/option/reliable/: host_server.hpp
src/net/packet/option/root/: host_server.cpp  host_server.hpp  roots.cpp  roots.hpp
src/util/: custom_formatter.hpp
